# telegram-connector

./: .gitignore  CLAUDE.md  Cargo.toml  config.example.toml
.github/workflows/: ci.yml
doc/: conventions.md  idea.md  memory.md  tasklist.md  vision.md  workflow.md
src/: config.rs  error.rs  lib.rs  link.rs  logging.rs  main.rs  rate_limiter.rs  telegram.rs
src/mcp/: server.rs  tools.rs
src/mcp/tools/: types.rs
src/telegram/: auth.rs  client.rs  types.rs
